# avionica

./: README.md  qrc.qrc
build-src-cmake-Default/: Avionicav2  Avionicav2.cbp  CMakeCache.txt  Makefile  cmake_install.cmake  moc_helperviewer2.cpp  moc_helpviewer.cpp  moc_mainwindow.cpp  moc_reconstruction.cpp  moc_videowidget.cpp  moc_viewer.cpp  ui_helpviewer.h  ui_mainwindow.h  ui_qdatabase.h  ui_reconstruction.h  ui_viewer.h
src/: Avionicav2.pro  CMakeLists.txt  common_includes.h  helperviewer2.cpp  helperviewer2.h  helperviewer2.ui  helpviewer.cpp  helpviewer.h  helpviewer.ui  interactor_style_actor.cpp  interactor_style_actor.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  pcl_includes.h  qdatabase.cpp  qdatabase.h  qdatabase.ui  qrc.qrc  reconstruction.cpp  reconstruction.h  reconstruction.ui  ui_viewer.h  videowidget.cpp  videowidget.h  videowidget.ui  viewer.cpp  viewer.h  viewer.ui  vtk_includes.h
